// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingScreen /> Displays lengthy operation message after the loading screen has been active for 6 seconds 1`] = `
<section
  aria-live="assertive"
  className="LoadingScreen"
  role="alert"
>
  <div
    className="LoadingSpinner"
  >
    <div />
    <div />
    <div />
  </div>
  <h1>
    Oops, this is slower than expected. Please wait a bit longer.
  </h1>
</section>
`;

exports[`<LoadingScreen /> Displays originally passed message for first 6 seconds 1`] = `
<section
  aria-live="assertive"
  className="LoadingScreen"
  role="alert"
>
  <div
    className="LoadingSpinner"
  >
    <div />
    <div />
    <div />
  </div>
  <h1>
    Your action is pending...
  </h1>
</section>
`;

exports[`<LoadingScreen /> Renders loading screen when passing showLoading prop 1`] = `
<section
  aria-live="assertive"
  className="LoadingScreen"
  role="alert"
>
  <div
    className="LoadingSpinner"
  >
    <div />
    <div />
    <div />
  </div>
  <h1>
    Your action is pending...
  </h1>
</section>
`;

exports[`<LoadingScreen /> Renders null when initially passing showLoading prop 1`] = `null`;
